checkpoint before checking out main
